# MedicalGraphRAGSystem

./: .claude.md  .claudeignore  .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
backend/: pyproject.toml
backend/api/: Dockerfile  README.md  __init__.py  app.py  models.py  qa_response.py
backend/core/: cli.py  config.py
backend/domain/data_spider/: README.md  config.py  main.py  parsers.py  spider.py  word_splitter.py
backend/domain/graphrag/: README.md  __init__.py  config.py  context_builder.py  entity_extractor.py  generator.py  graphrag_bot.py  subgraph_retriever.py
backend/domain/kbqa/: README.md  __init__.py  answer_formatter.py  chatbot.py  config.py  cypher_generator.py  entity_normalizer.py  graph_query.py  llm_engine.py  main.py
backend/domain/knowledge_graph/: README.md  __init__.py  config.py  data_loader.py  graph_builder.py  main.py
backend/domain/qa_engine/: README.md  __init__.py  cli.py  collect.py  graph_builder.py  graph_utils.py  session.py  state.py  stream.py  workflow_diagram.py
backend/domain/qa_engine/nodes/: __init__.py  analysis.py  error_handler.py  graphrag_path.py  normalize.py  route.py  template_path.py
backend/scripts/: docker-init.py  generate_diagrams.py
backend/tests/: README.md
backend/tests/integration/: test_api.py  test_api_contract.py  test_cypher_optimization.py  test_e2e.py  test_error_handling.py  test_fallback_strategy.py  test_final_refactoring.py  test_graph_connection.py  test_graphrag_integration.py  test_graphrag_pytest.py  test_kbqa_integration.py  test_langsmith_tracing.py  test_modular_refactoring.py  test_multi_turn.py  test_streaming_output.py
backend/tests/unit/: test_cypher_generator.py  test_data_spider.py  test_entity_normalizer.py  test_graphrag.py  test_kbqa.py  test_knowledge_graph.py  test_qa_engine.py
docs/: 01_QUICK_START.md  (+10 more)
(+29 files in other folders)
